media/radarr/radarr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    kubernetes.io/metadata.name: radarr
    media-ns: authorized
