media/radarr/radarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: radarr
          port: 7878
  tls:
    secretName: radarr-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: 7878
